# bookstore

./: Dockerfile  README.md  _.swo  _.swp  manage.py  pyproject.toml  pytest.ini  requirements.txt
bookstore/: settings.py  urls.py  wsgi.py
order/: factories.py
order/migrations/: 0001_initial.py  0002_rename_user_order_user.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_category_active.py  0002_rename_categories_product_category_and_more.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py
product/tests/test_viewset/: test_category_viewset.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
